/// Defines p2p metadata message types
syntax = "proto3";
package state;

import "common.proto";

// ---------
// | Types |
// ---------

/// Represents the metadata known about a peer in the network
message PeerInfo {
    /// The ID of the peer as a libp2p PeerId
    PeerId peer_id = 1;    
    /// The known, dialable address of the peer
    string addr = 2;
    /// The ID of the cluster that the peer belongs to
    ClusterId cluster_id = 3;
    /// The signature of the cluster auth message, authenticating this peer
    /// into its cluster
    bytes cluster_auth_sig = 4;
}

// -------------
// | Interface |
// -------------

// Add a set of new peers to the peer index
message AddPeers {
    // The ID of the peer in the libp2p PeerId format
    repeated PeerInfo peers = 1; 
}

// Remove a peer from the peer index
message RemovePeer {
    // The ID of the peer in the libp2p PeerId format
    string peer_id = 1;
}
